[tool.poetry]
name = "pvtpy"
version = "0.1.1"
description = "Oil&Gas PVT Tool"
authors = ["scuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scipy = "1.6.1"
pydantic = "^1.8.2"
PyYAML = "^5.4.1"
statsmodels = "^0.12.2"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
notebook = "^6.4.0"
mkdocs-material = "^7.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
