[tool.poetry]
name = "pvtpy"
version = "0.1.4"
description = "Oil&Gas PVT Tool"
authors = ["scuervo <scuervo91@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.4"
pandas = "2.0.3"
matplotlib = "^3.4.2"
seaborn = "^0.13.0"
scipy = [
    {version = "<1.9.0", python = "<3.10"},
    {version = "^1.9.0", python = "^3.10"}
]
pydantic = "^1.8.2"
PyYAML = "^6.0.1"
statsmodels = "^0.14.0"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
notebook = "^6.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
